--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,6 @@
-<h1>StaticPages#home</h1>
+<% provide(:title, 'Home') %>
+<h1>Sample App Home Page</h1>
 <p>Find me in app/views/static_pages/home.html.erb<br />
-Hohoho, I've already changed a content of this page using a file in views directory
-</p>
+Hohoho, I've already changed a content of this page using a file in views directory</p>
+
+
