--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,14 @@
-<h1>Sample App Home Page</h1>
-<p>Find me in app/views/static_pages/home.html.erb<br />
-Hohoho, I've already changed a content of this page using a file in views directory</p>
+<div class="center hero-unit">
+  <h1>Welcome to the Sample App</h1>
 
+  <h2>
+    This is the home page for the
+    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+    sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
 
